--- a/Page500GoFishStore/MainPage.xaml
+++ b/Page500GoFishStore/MainPage.xaml
@@ -1,13 +1,79 @@
 ﻿<Page
+    x:Name="pageRoot"
     x:Class="Page500GoFishStore.MainPage"
+    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Page500GoFishStore"
+    xmlns:common="using:Page500GoFishStore.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.Resources>
+        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
+        <x:String x:Key="AppName">Go Fish!</x:String>
+        <local:Game x:Name="game"/>
+    </Page.Resources>
 
+    <!--
+        This grid acts as a root panel for the page that defines two rows:
+        * Row 0 contains the back button and page title
+        * Row 1 contains the rest of the page layout
+    -->
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.ChildrenTransitions>
+            <TransitionCollection>
+                <EntranceThemeTransition/>
+            </TransitionCollection>
+        </Grid.ChildrenTransitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="140"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!-- Back button and page title -->
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="backButton" Margin="39,59,39,0" Command="{Binding NavigationHelper.GoBackCommand, ElementName=pageRoot}"
+                        Style="{StaticResource NavigationBackButtonNormalStyle}"
+                        VerticalAlignment="Top"
+                        AutomationProperties.Name="Back"
+                        AutomationProperties.AutomationId="BackButton"
+                        AutomationProperties.ItemType="Navigation Button"/>
+            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+                        IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
+        </Grid>
+        <Grid Grid.Row="1" Margin="120,0,60,60" DataContext="{StaticResource ResourceKey=game}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" MinHeight="150" />
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Text="Your Name" Margin="0,0,0,20" Style="{StaticResource SubheaderTextBlockStyle}"/>
+            <StackPanel Orientation="Horizontal" Grid.Row="1">
+                <TextBox FontSize="24" Width="500" MinWidth="300" Text="{Binding PlayerName}" IsEnabled="{Binding GameNotStarted}"/>
+                <Button x:Name="startButton" Margin="20,0,20,3" Content="Start The Game" IsEnabled="{Binding GameNotStarted}" VerticalAlignment="Bottom" Click="startButton_Click"/>
+            </StackPanel>
+            <TextBlock Margin="0,20,0,20" Text="Game Progress" Style="{StaticResource SubheaderTextBlockStyle}" Grid.Row="2"/>
+            <ScrollViewer x:Name="GameLog" Grid.Row="3" FontSize="12" Background="White" Foreground="Black" Content="{Binding GameProgress}" Padding="5"/>
+            <TextBlock Text="Books" Style="{StaticResource SubheaderTextBlockStyle}" Margin="0,20,0,20" Grid.Row="4"/>
+            <ScrollViewer x:Name="BookList" FontSize="24" Background="White" Foreground="Black" Grid.Row="5" Grid.RowSpan="2" Content="{Binding Books}"/>
+            <TextBlock Text="Your Hand" Style="{StaticResource SubheaderTextBlockStyle}" Grid.Row="0" Grid.Column="2" Margin="0,0,0,20"/>
+            <ListBox x:Name="Cards" Background="White" FontSize="24" Height="auto" Margin="0,0,0,20" Grid.Row="1" Grid.RowSpan="5" Grid.Column="2" IsEnabled="{Binding GameInProgress}" ItemsSource="{Binding Hand}" DoubleTapped="cards_DoubleTapped"/>
+            <Button x:Name="askForACard" Content="Ask for a Card" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="6" Grid.Column="2" IsEnabled="{Binding GameInProgress}" Click="askForACard_Click"/>
+        </Grid>
     </Grid>
 </Page>
